des--elev_rud_model_cpp_ws/logs/auv_imp/build.make.018.log
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_eus
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target avl_bsd_translator_generate_messages_py
[  0%] Built target avl_bsd_translator_generate_messages_cpp
[  0%] Built target avl_bsd_translator_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target avl_bsd_translator_generate_messages_nodejs
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_eus
[  0%] Built target avl_bsd_translator_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_nodejs
[35m[1mScanning dependencies of target auv_imp[0m
[ 50%] [32mBuilding CXX object CMakeFiles/auv_imp.dir/src/auv_imp.cpp.o[0m
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_cpp_ws/src/auv_imp/src/auv_imp.cpp: In constructor ‘AUVNode::AUVNode()’:
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_cpp_ws/src/auv_imp/src/auv_imp.cpp:30:65: error: ‘command_callback’ is not a member of ‘AUVNode’
   30 |         command_sub = nh.subscribe("bsd/command", 10, &AUVNode::command_callback, this);
      |                                                                 ^~~~~~~~~~~~~~~~
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_cpp_ws/src/auv_imp/src/auv_imp.cpp:31:63: error: ‘action_callback’ is not a member of ‘AUVNode’
   31 |         action_sub = nh.subscribe("bsd/action", 10, &AUVNode::action_callback, this);
      |                                                               ^~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/auv_imp.dir/build.make:63: CMakeFiles/auv_imp.dir/src/auv_imp.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:189: CMakeFiles/auv_imp.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
